# learn-rust-backend

./: Cargo.toml  Dockerfile  spec.yaml
.sqlx/: query-6ee4638aa4ebd9087444667418685aae60c968d3d22ac800c965cf1213e828a8.json  query-c8c6b0f184a6924073183f28978433178bc05bcee53865de9f742b85f2582570.json
configuration/: base.yaml  production.yaml
migrations/: 20240803074926_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
